Store Endpoint Update
