# docs/api/openapi.yaml
@@ -833,7 +833,7 @@ paths:
     get:
       summary: Get all stores
       tags:
-        - Stores
+      - Stores
       responses:
         "200":
           description: List of all stores
@@ -846,23 +846,29 @@ paths:
                     type: boolean
                   data:
                     type: array
-                    items:
-                      type: object
-                      properties:
-                        _id:
+                  items:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                        description: Unique identifier for the store
+                      businessName:
+                        type: string
+                        description: Name of the store
+                      description:
+                        type: string
+                        description: Description of the store
+                      location:
+                        type: string
+                        description: Location of the store
+                      ownerId:
+                        type: string
+                        description: ID of the owner of the store
+                      products:
+                        type: array
+                        items:
                           type: string
-                        name:
-                          type: string
-                        description:
-                          type: string
-                        location:
-                          type: string
-                        owner:
-                          type: string
-                        products:
-                          type: array
-                          items:
-                            type: string
+                          description: ID of a product
         "500":
           description: Internal server error
           content:
@@ -873,7 +879,7 @@ paths:
                   error:
                     type: string
 
-  /stores/{businessName}:
+  /stores/storeName/{businessName}:
     get:
       summary: Fetch store by name
       tags:
